# Bibliography-Hallucinations-Checker

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  output.txt  pyproject.toml  requirements.txt  run.py  test_alex.py  test_dblp.py  test_extraction.py  test_integration.py  test_normalizer.py  test_openalex_apostrophe.py  test_pdf_run.py  test_regex.py  wsgi.py
app/: __init__.py  pdf_processor.py  reference_checker.py  routes.py  scholar_checker.py
app/checkers/: __init__.py  config.py  extraction.py  normalizer.py  orchestrator.py
app/checkers/backends/: __init__.py  arxiv.py  base.py  crossref.py  datacite.py  dblp.py  openalex.py  security.py  url_checker.py  web_fallback.py
app/templates/: base.html  error_413.html  index.html  processing.html  results.html
docs/: ARCHITECTURE.md
scratch/: run_pytest.py  test_extraction_on_pdf.py  test_wachsmuth.py
