[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bibcheck"
version = "1.7.0"
description = "Detect hallucinated bibliographic references in PDFs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.2",
    "flask-wtf>=1.2.1",
    "pymupdf>=1.27.2.3",
    "werkzeug>=3.0.1",
    "python-dotenv>=1.0.1",
    "pyalex>=0.20",
    "habanero>=2.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "ddgs>=9.14.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
